--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.22.0",
+    "bcrypt": "^1.0.2",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.17.1"
   }
