--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.23.0",
     "bcrypt": "^1.0.2",
     "meteor-node-stubs": "~0.2.0",
+    "metismenu": "^2.7.0",
     "moment": "^2.17.1"
   }
 }
